fix a11y footer contrast issue

--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -63,7 +63,7 @@ footer#document-footer
         @extend .footer-social
     .footer-legals
         a, small
-            color: rgba($footer-color, 0.5)
+            color: rgba($footer-color, 0.75)
         a:hover
             color: rgba($footer-color, 1)
     @include media-breakpoint-up(desktop)
